--- a/package.json
+++ b/package.json
@@ -27,12 +27,9 @@
     "@nestjs/typeorm": "^9.0.1",
     "@prisma/client": "^4.10.0",
     "amqp-connection-manager": "^4.1.10",
-    "amqplib": "^0.10.3",
-    "pg": "^8.8.0",
     "pusher": "^5.1.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "typeorm": "^0.3.11"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
