--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.2",
     "@nestjs/microservices": "^9.2.1",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^8.4.7",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^8.4.7",
     "@prisma/client": "^4.10.0",
+    "@types/socket.io": "^3.0.2",
     "amqp-connection-manager": "^4.1.10",
-    "pusher": "^5.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
@@ -38,6 +42,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
